--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "web-vitals": "^0.2.4"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
@@ -33,7 +32,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint --ext ts,tsx . --fix"
   },
   "eslintConfig": {
     "extends": [
