--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react-router-dom": "^5.1.6",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
     "@typescript-eslint/parser": "^4.9.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "react-scripts": "4.0.1",
     "redux-devtools-extension": "^2.13.8"
   },
