--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
-    "desdeo-d3-barchart": "^0.1.2",
+    "desdeo-components": "^0.1.0",
     "fontsource-roboto": "^3.1.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
