--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "npm run test:unit",
+    "test:coverage": "react-scripts test --env=jsdom --watchAll=false --coverage",
     "test:unit": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint --ext ts,tsx . --fix"
