--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.8",
-    "@testing-library/react": "^11.2.2",
+    "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
     "desdeo-components": "^0.1.3",
@@ -20,7 +20,7 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
-    "@types/jest": "^26.0.19",
+    "@types/jest": "^26.0.20",
     "@types/node": "^14.14.20",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
@@ -33,12 +33,13 @@
     "redux-devtools-extension": "^2.13.8"
   },
   "scripts": {
-    "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "npm run test:unit",
-    "test:unit": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint --ext ts,tsx . --fix"
+    "lint": "eslint --ext ts,tsx . --fix",
+    "start": "react-scripts start",
+    "test": "npm run test:unit",
+    "test:coverage": "react-scripts test --env=jsdom --watchAll=false --coverage",
+    "test:unit": "react-scripts test"
   },
   "eslintConfig": {
     "extends": [
