--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
-    "axios": "^0.21.1",
     "desdeo-components": "^0.1.8",
     "fontsource-roboto": "^4.0.0",
     "react": "^17.0.1",
@@ -15,7 +14,6 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
     "typescript": "^4.1.3"
   },
   "devDependencies": {
@@ -37,14 +35,8 @@
     "lint": "eslint --ext ts,tsx . --fix",
     "start": "react-scripts start",
     "test": "npm run test:unit",
-    "test:coverage": "react-scripts test --env=jsdom --watchAll=false --coverage",
+    "test:coverage": "react-scripts test --env=jsdom --watchAll=false --coverage --collectCoverageFrom=!src/tests/**",
     "test:unit": "react-scripts test"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
