--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@types/react-router-dom": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
+    "eslint": "^7.20.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "react-scripts": "4.0.2",
     "redux-devtools-extension": "^2.13.8"
@@ -34,9 +37,8 @@
     "eject": "react-scripts eject",
     "lint": "eslint --ext ts,tsx . --fix",
     "start": "react-scripts start",
-    "test": "npm run test:unit",
-    "test:coverage": "react-scripts test --env=jsdom --watchAll=false --coverage --collectCoverageFrom=!src/tests/**",
-    "test:unit": "react-scripts test"
+    "test": "react-scripts test",
+    "test:coverage": "react-scripts test --env=jsdom --watchAll=false --coverage --collectCoverageFrom=!src/tests/**"
   },
   "browserslist": {
     "production": [
