--- a/.github/workflows/feature.yml
+++ b/.github/workflows/feature.yml
@@ -22,6 +22,4 @@ jobs:
         node-version: '12.x'
     - run: npm ci
     - run: npm run lint
-    - run: npm run test:unit
-      env:
-        CI: true
+    - run: npm run test
