--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -18,6 +18,7 @@ env:
 rules:
   "@typescript-eslint/explicit-function-return-type": 2
   react/prop-types: 0
+  react/react-in-jsx-scope: "off"
   prettier/prettier: 2
 
 settings:
